--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
+  <%= yield %>
 
+  <script type="text/javascript">
+    $(document).ready(function() {
+      new Todo.Router()
+      Backbone.history.start({
+        pushState: true,
+        hashChange: false
+      })
+    })
+  </script>
 </body>
 </html>
